# rust_bin_bot

./: .env  .gitignore  Cargo.toml  log4rs.yml
config/: log4rs.yml
src/: api.rs  best_params.rs  indic_compute.rs  main.rs  pnl.rs
