[package]
name = "binance_raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version= "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"
ta-lib-wrapper = "0.2.0"
chrono = "0.4"
job_scheduler = "*"